# Json

./: .gitignore  CMakeLists.txt  Json.sln  README.md
DLLJson/: CMakeLists.txt  DLLJson.vcxproj  DLLJson.vcxproj.filters  DLLLinker.cpp  RefJson.h  RefValue.h
DLLJson/x64/Debug/: DLLJson.dll.recipe  DLLJson.vcxproj.FileListAbsolute.txt
DLLJson/x64/Debug/DLLJson.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DLLJson.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Json/: Json.h  Json.vcxproj  Json.vcxproj.filters  Value.h  Value2.h  main.cpp
Json.exe/: CMakeLists.txt  Json.exe.vcxproj  Json.exe.vcxproj.filters  Main.cpp  test.json  test2.json
Json.exe/x64/Debug/: Json.exe.exe.recipe  Json.exe.ilk  Json.exe.vcxproj.AssemblyReference.cache  Json.exe.vcxproj.FileListAbsolute.txt  vc143.idb
Json.exe/x64/Debug/Json.exe.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Json.exe.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
JsonVisual/: Form1.Designer.cs  (+3 more)
StatLibJson/: CMakeLists.txt  JSON.interp  JSON.tokens  JSONBaseVisitor.h  JSONLexer.cpp  JSONLexer.h  JSONLexer.interp  JSONParser.cpp  JSONParser.h  JSONParserLexer.cpp  JSONParserLexer.h  JSONParserLexer.interp  JSONParserLexer.tokens  JSONUserVisitor.cpp  JSONUserVisitor.h  JSONVisitor.h  Json.h  StatLibJson.vcxproj  StatLibJson.vcxproj.filters  StatLibLinker.cpp  Value.h  test.json
StatLibJson/x64/Debug/StatLibJson.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
(+17 files in other folders)
